tests/NormalTests/paczka1/fuzzy1/50376724.err
Error in line 4: h0Nyv7sY S261 50,3
Error in line 3: ji1WJ S549 42,4
Error in line 6: ji1WJ S261 40,8
Error in line 22: 9iE S261 1,6
Error in line 17: ji1WJ A305 54,1
Error in line 23: 9iE S549 65,0
Error in line 25: 9iE S261 99,1
Error in line 29: 9iE A305 87,2
Error in line 34: NZjYJjWt A886 23,0
Error in line 16: 60PHLwiIs1U S549 164,9
Error in line 39: h0Nyv7sY S549 29,32
